// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditQuestion render test question is NOT null 1`] = `
<div>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <title>
      title
    </title>
    <meta
      content="content"
      name="description"
    />
  </HelmetWrapper>
  <UNDEFINED />
</div>
`;

exports[`EditQuestion render test question is null 1`] = `
<div>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <title>
      Edit question
    </title>
    <meta
      name="description"
    />
  </HelmetWrapper>
  <UNDEFINED />
</div>
`;

exports[`EditQuestion render test questionLoading is falsy 1`] = `
<div>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <title>
      title
    </title>
    <meta
      content="content"
      name="description"
    />
  </HelmetWrapper>
  <UNDEFINED
    form="app/AskQuestion/EDIT_QUESTION_FORM"
    formTitle="Edit question"
    question={
      Object {
        "content": "content",
        "title": "title",
      }
    }
    questionid={1}
    sendQuestion={[Function]}
    submitButtonId="app/AskQuestion/EDIT_QUESTION_BUTTON"
    submitButtonName="Save"
  />
</div>
`;

exports[`EditQuestion render test questionLoading is true 1`] = `
<div>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <title>
      title
    </title>
    <meta
      content="content"
      name="description"
    />
  </HelmetWrapper>
  <UNDEFINED />
</div>
`;
